5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1577_1332.log
== SUBMITION (2019-03-14 19:25:42) 
-- CODE:
aresta =
area = 
 
print(round(3/2(3)**0.5, 4))
-- EXECUTION TIME:
0.159335
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 1
    aresta =
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:28:03) 
-- CODE:
aresta =
area = 
 
print(round(3/2*(3)**0.5*5**2, 4))
-- EXECUTION TIME:
0.16187
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 1
    aresta =
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:28:29) 
-- CODE:
print(round(3/2*(3)**0.5*5**2, 4))
-- EXECUTION TIME:
0.150281
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
